--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
                         </div>
                         <div class="section-1-4-value-1">
                             <div class="section-1-4-icon">
-                                <svg  class="secion-1-4-clock" width="27" height="13" viewBox="0 0 27 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <svg  class="secion-1-4-clock middle-km"  width="27" height="13" viewBox="0 0 27 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M7.442 13H11.204L6.128 6.556L11.024 0.364H7.406L3.194 5.908V0.364H0.116V13H3.194V7.42L7.442 13ZM12.6668 13H15.7448V5.404L18.5888 13H21.0728L23.8988 5.422V13H26.9768V0.364H23.3588L19.8488 9.112L16.3028 0.364H12.6668V13Z" fill="#89A7AE"/>
                                     </svg>
                                     
-                                  <svg class="section-1-4-visible" xmlns="http://www.w3.org/2000/svg" width="24.552" height="16.047" viewBox="0 0 24.552 16.047">
+                                  <svg class="section-1-4-visible middle-visible" id='middle-visible' xmlns="http://www.w3.org/2000/svg" width="24.552" height="16.047" viewBox="0 0 24.552 16.047">
                                     <path id="Icon_material-remove-red-eye" data-name="Icon material-remove-red-eye" d="M13.776,6.75A13.2,13.2,0,0,0,1.5,14.774,13.2,13.2,0,0,0,13.776,22.8a13.2,13.2,0,0,0,12.276-8.024A13.2,13.2,0,0,0,13.776,6.75Zm0,13.373A5.47,5.47,0,0,1,8.2,14.774a5.47,5.47,0,0,1,5.58-5.349,5.47,5.47,0,0,1,5.58,5.349A5.47,5.47,0,0,1,13.776,20.123Zm0-8.559a3.212,3.212,0,1,0,0,6.419,3.212,3.212,0,1,0,0-6.419Z" transform="translate(-1.5 -6.75)" fill="#05c7f2"/>
                                   </svg>
                                   
